# toolery

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  golden_probe.py  patch_timeouts_merge.py  pyproject.toml  rescore_minimax.py  test.sh  toolery.sh
.github/workflows/: ci.yml
docs/: NEXT-STEPS.md  hermes-mcp-bridge.md  plan.md  spec.md
docs/superpowers/: HANDOFF-PR-BODY.md  HANDOFF.md
llm_test/: __init__.py  cli.py  compare.py
llm_test/adapters/: __init__.py  base.py  claude_code.py  cloud.py  codex.py  hermes.py  openai_raw.py
llm_test/core/: adapter_probe.py  endpoint_scanner.py  markdown.py  models.py  runner.py  runner_subprocess.py  scenario.py  scorer.py  stats.py  store.py
llm_test/perf/: benchy.py
llm_test/rankings/: compute.py  presets.py
llm_test/tools/: __init__.py  api_db.py  domain.py  generic.py  inspect_failures.py  mock_runtime.py  registry.py  rescore_gradient.py  terminal.py
llm_test/tui/: app.py  compare_tab.py  history_tab.py  home_tab.py  launch_modal.py  live_tab.py  profiles_tab.py  rankings_tab.py  scenarios_tab.py  setup_tab.py
scenarios/easy/: easy-01-direct-weather.yaml  easy-02-read-before-write.yaml  easy-03-refuse-trivial-math.yaml  easy-04-parallel-fanout.yaml  easy-05-distractor-resistance.yaml  easy-06-implicit-tool-need.yaml  easy-07-trivial-knowledge.yaml  easy-08-impossible-request.yaml  easy-09-json-output.yaml  easy-10-unit-handling.yaml  easy-11-haluc-unknowable.yaml  easy-12-term-disk-usage.yaml  easy-13-term-ls-parse.yaml  easy-14-term-ansi-strip.yaml  easy-15-coding-pyproject-name.yaml  easy-16-coding-pytest-count.yaml  easy-19-pl-medical-refuse.yaml  (+23 more)
scripts/: codex_self_eval.py
tests/: conftest.py  test_backfill_correctness.py  test_cli.py  test_compare.py
toolery/: __init__.py  cli.py  compare.py
(+212 files in other folders)
