[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolery"
version = "0.1.0"
description = "Deterministic 4-tier LLM tool-calling benchmark"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "karol.palys" }]
keywords = ["llm", "benchmark", "tool-calling", "evaluation", "tui", "agents"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Environment :: Console",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "textual>=0.85",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "openai>=1.40",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "scipy>=1.12",
  "jinja2>=3.1",
  "jsonschema>=4.21",
]

[project.optional-dependencies]
perf = ["llama-benchy"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
toolery = "toolery.cli:app"

[project.urls]
Homepage = "https://github.com/karolpalys/toolery"
Repository = "https://github.com/karolpalys/toolery"
Issues = "https://github.com/karolpalys/toolery/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # let formatter handle line length

[tool.ruff.lint.per-file-ignores]
# Tests intentionally place some imports after module-level setup
# (env tweaks, fixtures) — E402 is expected there.
"tests/**" = ["E402"]
